# auth-endpoint-pytest-poetry

./: Makefile  README.md  pyproject.toml
src/auth_app/: app.py
tests/: test_auth.py
